@@ -17,23 +17,28 @@
  */
 package com.github.kaklakariada.fritzbox.model.homeautomation;
 
+import org.simpleframework.xml.ElementList;
+
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public abstract class AbstractDeviceStatistics {
 
-     /**
+    @ElementList(name = "stats", required = false, inline = true)
+    protected List<Statistics> stats;
+
+    /**
      * Supply the Statistics gathered for a chosen grid
      * 
      * @param grid
-     *                 grid
+     *            grid
      * @return Optional - avoid NPE if no statistics present
      */
     public Optional<Statistics> getStatisticsByGrid(final int grid) {
         return getStats()
                 .stream()
-                .filter(stats -> stats.getGrid() == grid)
+                .filter(stat -> stat.getGrid() == grid)
                 .findAny();
     }
 
@@ -42,24 +47,30 @@ public abstract class AbstractDeviceStatistics {
      * 
      * @return List
      */
-    public abstract List<Statistics> getStats();
+    public List<Statistics> getStats() {
+        return getStats(stats, MeasurementUnit.getMatchingMeasurementUnit(this.getClass()));
+    }
 
     /**
      * AVM gathers just integer numbers. We know the precision only from documentation, it is never provided by returned
      * responses from Fritz!Box. So we add this information here to the statistics.
      * 
-     * @param stats statistics to which to add the measurment unit
-     * @param measurementUnit the unit to add to the statistics
+     * @param stats
+     *            statistics to which to add the measurement unit
+     * @param measurementUnit
+     *            the unit to add to the statistics
      * @return statistics with measurement units
      */
     protected List<Statistics> getStats(final List<Statistics> stats, final MeasurementUnit measurementUnit) {
+        if (stats == null) {
+            return Collections.emptyList();
+        }
         return stats
                 .stream()
                 .map(stat -> {
                     stat.setMeasurementUnit(measurementUnit);
                     return stat;
-                })
-                .collect(Collectors.toList());
+                }).toList();
     }
 
     /**
@@ -67,24 +78,28 @@ public abstract class AbstractDeviceStatistics {
      * 
      * @return List
      */
-    protected abstract List<String> statisticsToString();
+    protected List<String> statisticsToString() {
+        return statisticsToString(MeasurementUnit.getMatchingMeasurementUnit(this.getClass()).name());
+    }
 
     /**
-     * @param type statistics type
+     * @param type
+     *            statistics type
      * @return statistics as one line per grid
      */
     protected List<String> statisticsToString(final String type) {
         return getStats()
                 .stream()
-                .map(stats -> statisticsToString(type, stats))
-                .collect(Collectors.toList());
+                .map(stat -> statisticsToString(type, stat)).toList();
     }
 
     /**
      * Form a line from a single statistic.
      * 
-     * @param type statistics type
-     * @param statistics statistic to convert to {@link String}
+     * @param type
+     *            statistics type
+     * @param statistics
+     *            statistic to convert to {@link String}
      * @return statistic as a line
      */
     private String statisticsToString(final String type, final Statistics statistics) {
